kyverno-policies/good-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: good-nginx

  labels:
    app: nginx

spec:
  containers:
  - name: nginx
    image: nginx:1.27
