kyverno-policies/Non-Root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-nonroot

spec:
  validationFailureAction: Enforce
  background: true

  rules:

  - name: run-as-non-root

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "Containers must run as non-root."

      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
