kyverno-policies/block-host-network.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-hostnetwork

spec:
  validationFailureAction: Enforce

  rules:

  - name: no-hostnetwork

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "Host Network is prohibited."

      pattern:
        spec:
          hostNetwork: false
