kyverno-policies/block-latest-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: Enforce
  background: true

  rules:
  - name: validate-image-tag
    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "Using latest image tag is not allowed."

      pattern:
        spec:
          containers:
          - image: "!*:latest"
