kyverno-policies/require-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-app-label

spec:
  validationFailureAction: Enforce

  background: true

  rules:

  - name: check-app-label

    match:

      any:

      - resources:

          kinds:

          - Pod

    validate:

      message: "Every Pod must have an app label."

      pattern:

        metadata:

          labels:

            app: "?*"
