kyverno-policies/require-readOnly-root-filesystem.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: readonly-rootfs

spec:
  validationFailureAction: Enforce
  background: true

  rules:

  - name: readonly-root

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "Containers must use readOnlyRootFilesystem."

      pattern:
        spec:
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
