kyverno-policies/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits

spec:
  validationFailureAction: Enforce
  background: true

  rules:
  - name: check-resources

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "CPU and Memory limits are required."

      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: "?*"
                cpu: "?*"
